Fix conversation members scrollbar on Windows

--- a/client/app/styles/window.less
+++ b/client/app/styles/window.less
@@ -266,7 +266,7 @@
         width: 32px;
         border-left: 1px solid @window-line-color;
         line-height: 150%;
-        overflow-y: scroll;
+        overflow-y: auto;
         padding-top: 3px;
 
         & > * {
